--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "keywords": [
     "rest",
     "api",
@@ -18,10 +17,8 @@
     "mysql",
     "jwt"
   ],
-
   "author": "ms-karthick",
   "license": "ISC",
-  
   "dependencies": {
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
@@ -31,6 +28,7 @@
     "inquirer": "^9.2.3",
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.1",
     "sequelize": "^6.31.1",
